--- a/index.html
+++ b/index.html
@@ -3,239 +3,106 @@
 <head>
   <meta charset="utf-8" />
   <title>Şifrə Generatoru</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    body { font-family: Arial, sans-serif; margin: 2rem; max-width: 800px; line-height:1.4; }
-    label { display:block; margin-top: 0.6rem; }
-    .controls { display:flex; gap:1rem; flex-wrap:wrap; align-items:center; }
-    .col { min-width:160px; }
-    .output { margin-top: 1rem; font-family: monospace; white-space: pre-wrap; }
-    .pw-row { display:flex; gap:0.5rem; align-items:center; margin-top:0.5rem; }
-    .pw { padding:0.35rem 0.5rem; border-radius:4px; border:1px solid #ddd; min-width:260px; word-break:break-all; }
-    button { padding:0.45rem 0.7rem; border-radius:6px; border:1px solid #888; background:#f3f3f3; cursor:pointer; }
-    button:active { transform:translateY(1px); }
-    .actions { margin-top:1rem; display:flex; gap:0.5rem; flex-wrap:wrap; }
-    .strength { font-size:0.9rem; margin-left:0.5rem; }
-    progress { width:160px; height:10px; vertical-align:middle; }
-    footer { margin-top:1.5rem; color:#666; font-size:0.9rem; }
-    @media (max-width:540px){ .pw { min-width:160px; } }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 2rem;
+      max-width: 700px;
+      background: linear-gradient(135deg, #ffb6c1, #d8b4fe);
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      color: #4b0082;
+      text-shadow: 1px 1px 2px #fff;
+    }
+    label {
+      display:block;
+      margin-top: 0.7rem;
+      font-weight: bold;
+    }
+    input[type="number"] {
+      padding: 0.3rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    input[type="checkbox"] {
+      margin-right: 0.4rem;
+    }
+    button {
+      margin-top: 1rem;
+      padding: 0.6rem 1.2rem;
+      border: none;
+      border-radius: 8px;
+      background: #ba68c8;
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    button:hover {
+      background: #ab47bc;
+    }
+    .output {
+      margin-top: 1.5rem;
+      font-family: monospace;
+      white-space: pre-wrap;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
   </style>
 </head>
 <body>
   <h1>Şifrə Generatoru</h1>
+  <label>Uzunluq: <input id="length" type="number" value="16" min="4" max="128"></label>
+  <label><input id="upper" type="checkbox" checked> Böyük hərflər (A-Z)</label>
+  <label><input id="lower" type="checkbox" checked> Kiçik hərflər (a-z)</label>
+  <label><input id="digits" type="checkbox" checked> Rəqəmlər (0-9)</label>
+  <label><input id="symbols" type="checkbox" checked> Xüsusi simvollar (!@#...)</label>
+  <label><input id="avoid" type="checkbox"> Ambiguous simvolları çıxar (O,0,l,1)</label>
+  <label>Nə qədər: <input id="count" type="number" value="3" min="1" max="50"></label>
+  <button id="gen">Generator et</button>
 
-  <div class="controls" role="group" aria-label="Generator parametrləri">
-    <div class="col">
-      <label>Uzunluq: <input id="length" type="number" value="16" min="4" max="128" aria-label="Şifrə uzunluğu"></label>
-      <label>Nə qədər: <input id="count" type="number" value="3" min="1" max="50" aria-label="Parol sayı"></label>
-    </div>
-
-    <div class="col">
-      <label><input id="upper" type="checkbox" checked> Böyük hərflər (A-Z)</label>
-      <label><input id="lower" type="checkbox" checked> Kiçik hərflər (a-z)</label>
-      <label><input id="digits" type="checkbox" checked> Rəqəmlər (0-9)</label>
-      <label><input id="symbols" type="checkbox" checked> Xüsusi simvollar (!@#...)</label>
-      <label><input id="avoid" type="checkbox"> Ambiguous simvolları çıxar (O,0,l,1)</label>
-    </div>
-  </div>
-
-  <div class="actions">
-    <button id="gen">Generator et</button>
-    <button id="copyAll">Copy all</button>
-    <button id="download">Download .txt</button>
-    <div class="strength" id="strengthLabel">Güc: — <progress id="strengthBar" value="0" max="100"></progress></div>
-  </div>
-
-  <div class="output" id="out" aria-live="polite"></div>
+  <div class="output" id="out"></div>
 
 <script>
-/* --- Konfiqurasiya --- */
 const AMBIGUOUS = new Set(['O','0','I','l','1']);
-const SYMBOLS = "!@#$%^&*()-_=+[]{};:,.<>/?";
-
-/* --- Yardımçılar --- */
-function getRandomInt(max) {
-  // crypto random int 0..max-1 (qeyd: mod bias minimaldır burada)
-  const arr = new Uint32Array(1);
-  window.crypto.getRandomValues(arr);
-  return Math.floor(arr[0] / 4294967296 * max);
-}
-function shuffleArray(a) {
-  for (let i = a.length - 1; i > 0; i--) {
-    const j = getRandomInt(i + 1);
-    [a[i], a[j]] = [a[j], a[i]];
-  }
-  return a;
-}
+const symbols = "!@#$%^&*()-_=+[]{};:,.<>/?";
 function buildCharset(upper, lower, digits, sym, avoid) {
   let s = "";
   if (upper) s += "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
   if (lower) s += "abcdefghijklmnopqrstuvwxyz";
   if (digits) s += "0123456789";
-  if (sym) s += SYMBOLS;
+  if (sym) s += symbols;
   if (avoid) s = [...s].filter(ch => !AMBIGUOUS.has(ch)).join('');
   return s;
 }
-
-/* --- Əsas parol generasiya: hər seçilmiş qrupdan ən azı 1 simvol --- */
-function generatePasswordEnsuringGroups(length, options) {
-  const {upper, lower, digits, symbols, avoid} = options;
-  const groups = [];
-  if (upper) groups.push("ABCDEFGHIJKLMNOPQRSTUVWXYZ");
-  if (lower) groups.push("abcdefghijklmnopqrstuvwxyz");
-  if (digits) groups.push("0123456789");
-  if (symbols) groups.push(SYMBOLS);
-
-  // apply avoid to groups
-  const processedGroups = groups.map(g => avoid ? [...g].filter(ch=>!AMBIGUOUS.has(ch)).join('') : g).filter(g=>g.length>0);
-
-  // build full charset
-  const charset = buildCharset(upper, lower, digits, symbols, avoid);
-  if (!charset) throw new Error("Simvol dəsti boşdur — ən azı bir qutu seçin.");
-
-  const pwdChars = [];
-
-  // ensure at least one char from each processed group (if possibile and length allows)
-  for (const g of processedGroups) {
-    if (pwdChars.length < length) {
-      pwdChars.push(g[getRandomInt(g.length)]);
-    }
-  }
-
-  // fill remaining with random chars from full charset
-  while (pwdChars.length < length) {
-    pwdChars.push(charset[getRandomInt(charset.length)]);
-  }
-
-  // shuffle to avoid predictable prefix
-  return shuffleArray(pwdChars).join('');
+function randomChoice(str) {
+  const i = Math.floor(window.crypto.getRandomValues(new Uint32Array(1))[0] / 4294967296 * str.length);
+  return str[i];
 }
-
-/* --- Sadə strength estimator --- */
-function estimateStrength(pwd, options) {
-  let score = 0;
-  const len = pwd.length;
-  if (len >= 8) score += 20;
-  if (len >= 12) score += 20;
-  if (len >= 16) score += 20;
-
-  const variety = new Set(pwd).size;
-  if (variety >= 8) score += 15;
-  if (variety >= 12) score += 15;
-
-  // bonus for character classes
-  let classes = 0;
-  if (/[A-Z]/.test(pwd)) classes++;
-  if (/[a-z]/.test(pwd)) classes++;
-  if (/[0-9]/.test(pwd)) classes++;
-  if (new RegExp("[" + SYMBOLS.replace(/[[\]{}()*+?.,\\^$|#\s]/g,'\\$&') + "]").test(pwd)) classes++;
-  score += Math.min(classes,4) * 7; // up to +28
-
-  return Math.min(100, score);
-}
-
-/* --- UI və eventlər --- */
-const outDiv = document.getElementById('out');
-const strengthBar = document.getElementById('strengthBar');
-const strengthLabel = document.getElementById('strengthLabel');
-
-function renderPasswords(list) {
-  outDiv.innerHTML = '';
-  list.forEach((pw, idx) => {
-    const row = document.createElement('div');
-    row.className = 'pw-row';
-    const pre = document.createElement('div');
-    pre.className = 'pw';
-    pre.textContent = `${idx+1}: ${pw}`;
-    pre.setAttribute('aria-label', `Parol ${idx+1}`);
-    const copyBtn = document.createElement('button');
-    copyBtn.textContent = 'Copy';
-    copyBtn.addEventListener('click', () => {
-      navigator.clipboard.writeText(pw).then(()=> {
-        copyBtn.textContent = 'Copied!';
-        setTimeout(()=> copyBtn.textContent = 'Copy', 1200);
-      }).catch(()=> alert('Clipboard-a kopyalama mümkün olmadı.'));
-    });
-    row.appendChild(pre);
-    row.appendChild(copyBtn);
-    outDiv.appendChild(row);
-  });
-}
-
 document.getElementById('gen').addEventListener('click', () => {
-  try {
-    const length = parseInt(document.getElementById('length').value,10) || 16;
-    const count = Math.min(50, Math.max(1, parseInt(document.getElementById('count').value,10) || 3));
-    const options = {
-      upper: document.getElementById('upper').checked,
-      lower: document.getElementById('lower').checked,
-      digits: document.getElementById('digits').checked,
-      symbols: document.getElementById('symbols').checked,
-      avoid: document.getElementById('avoid').checked
-    };
-
-    const charset = buildCharset(options.upper, options.lower, options.digits, options.symbols, options.avoid);
-    if (!charset) { alert("Simvol dəsti boşdur — ən azı bir qutu seçin."); return; }
-    if (length < processedMinLength(options)) {
-      if (!confirm(`Seçilən seçimlərə görə ən azı ${processedMinLength(options)} simvol tövsiyə olunur. Davam edilsin?`)) return;
+  const length = parseInt(document.getElementById('length').value,10);
+  const count = parseInt(document.getElementById('count').value,10);
+  const charset = buildCharset(
+    document.getElementById('upper').checked,
+    document.getElementById('lower').checked,
+    document.getElementById('digits').checked,
+    document.getElementById('symbols').checked,
+    document.getElementById('avoid').checked
+  );
+  if (!charset) { alert("Simvol dəsti boşdur — ən azı bir qutu seçin."); return; }
+  let out = "";
+  for (let n=0;n<count;n++){
+    let pwd = "";
+    for (let i=0;i<length;i++){
+      pwd += randomChoice(charset);
     }
-
-    const list = [];
-    for (let i=0;i<count;i++){
-      list.push(generatePasswordEnsuringGroups(length, options));
-    }
-    renderPasswords(list);
-
-    // update strength using first password as sample
-    const s = estimateStrength(list[0], options);
-    strengthBar.value = s;
-    strengthLabel.firstChild && strengthLabel.removeChild(strengthLabel.firstChild);
-    // update label text
-    strengthLabel.childNodes[0]; // noop to keep structure
-    strengthLabel.innerHTML = `Güc: ${s}% <progress id="strengthBar" value="${s}" max="100"></progress>`;
-  } catch (e) {
-    alert(e.message || 'Xəta');
+    out += `${n+1}: ${pwd}\n`;
   }
-});
-
-function processedMinLength(options) {
-  // ən azı hər seçilmiş qrup üçün 1 simvol yerləşdirmək üçün minimal tövsiyə
-  let required = 0;
-  if (options.upper) required++;
-  if (options.lower) required++;
-  if (options.digits) required++;
-  if (options.symbols) required++;
-  return Math.max(4, required); // ən azı 4 tövsiyə etsək yaxşıdır
-}
-
-/* Copy all */
-document.getElementById('copyAll').addEventListener('click', async () => {
-  // collect generated passwords
-  const pwDivs = outDiv.querySelectorAll('.pw');
-  if (!pwDivs.length) { alert('İlk öncə generator et.'); return; }
-  const txt = [...pwDivs].map(d => d.textContent).join('\n');
-  try {
-    await navigator.clipboard.writeText(txt);
-    alert('Hamısı clipboard-a kopyalandı.');
-  } catch {
-    alert('Clipboard-a kopyalama mümkün olmadı.');
-  }
-});
-
-/* Download as txt */
-document.getElementById('download').addEventListener('click', () => {
-  const pwDivs = outDiv.querySelectorAll('.pw');
-  if (!pwDivs.length) { alert('İlk öncə generator et.'); return; }
-  const txt = [...pwDivs].map(d => d.textContent).join('\n');
-  const blob = new Blob([txt], {type:'text/plain;charset=utf-8'});
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url;
-  a.download = 'passwords.txt';
-  document.body.appendChild(a);
-  a.click();
-  a.remove();
-  URL.revokeObjectURL(url);
+  document.getElementById('out').textContent = out;
 });
 </script>
 </body>
