--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="az">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- vacib: responsive üçün -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Şifrə Generatoru</title>
   <style>
     body {
@@ -44,7 +44,6 @@
       font-size: 1rem;
       cursor: pointer;
       transition: background 0.3s;
-      width: 100%;
     }
     button:hover {
       background: #ab47bc;
@@ -57,35 +56,33 @@
       padding: 1rem;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      position: relative;
+    }
+    .copy-btn {
+      display: inline-block;
+      margin-left: 10px;
+      padding: 0.2rem 0.5rem;
+      font-size: 0.8rem;
+      background: #ff69b4;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .copy-btn:hover {
+      background: #ff1493;
     }
 
-    /* Desktop görünüşü */
     @media (min-width: 601px) {
-      label {
-        flex-direction: row;
-        align-items: center;
-      }
-      input[type="number"] {
-        width: 120px;
-      }
-      body {
-        font-size: 1rem;
-      }
+      label { flex-direction: row; align-items: center; }
+      input[type="number"] { width: 120px; }
+      body { font-size: 1rem; }
     }
-
-    /* Mobil görünüşü */
     @media (max-width: 600px) {
-      body {
-        margin: 1rem;
-        font-size: 0.9rem;
-      }
-      label {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      input[type="number"] {
-        width: 100%;
-      }
+      body { margin: 1rem; font-size: 0.9rem; }
+      label { flex-direction: column; align-items: flex-start; }
+      input[type="number"] { width: 100%; }
     }
   </style>
 </head>
@@ -106,6 +103,7 @@
 <script>
 const AMBIGUOUS = new Set(['O','0','I','l','1']);
 const symbols = "!@#$%^&*()-_=+[]{};:,.<>/?";
+
 function buildCharset(upper, lower, digits, sym, avoid) {
   let s = "";
   if (upper) s += "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
@@ -115,10 +113,18 @@ function buildCharset(upper, lower, digits, sym, avoid) {
   if (avoid) s = [...s].filter(ch => !AMBIGUOUS.has(ch)).join('');
   return s;
 }
+
 function randomChoice(str) {
   const i = Math.floor(window.crypto.getRandomValues(new Uint32Array(1))[0] / 4294967296 * str.length);
   return str[i];
 }
+
+function copyToClipboard(text) {
+  navigator.clipboard.writeText(text).then(() => {
+    alert("Şifrə kopyalandı: " + text);
+  });
+}
+
 document.getElementById('gen').addEventListener('click', () => {
   const length = parseInt(document.getElementById('length').value,10);
   const count = parseInt(document.getElementById('count').value,10);
@@ -130,15 +136,16 @@ document.getElementById('gen').addEventListener('click', () => {
     document.getElementById('avoid').checked
   );
   if (!charset) { alert("Simvol dəsti boşdur — ən azı bir qutu seçin."); return; }
-  let out = "";
+
+  let outHTML = "";
   for (let n=0;n<count;n++){
     let pwd = "";
     for (let i=0;i<length;i++){
       pwd += randomChoice(charset);
     }
-    out += `${n+1}: ${pwd}\n`;
+    outHTML += `<div>${n+1}: ${pwd} <button class="copy-btn" onclick="copyToClipboard('${pwd}')">Copy</button></div>`;
   }
-  document.getElementById('out').textContent = out;
+  document.getElementById('out').innerHTML = outHTML;
 });
 </script>
 </body>
